--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>flower-shop-assignment</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -123,7 +123,7 @@
                             <img src="images/Rectangle 6.png" alt="">
                         </div>
                     </div>
-                    <div class="leatest-deal-contact">
+                    <div class="leatest-deal-contact" style="background-image: url(images/Rectangle-9.png);">
                         <div class="conatct-text">
                             <h2 class="similar-title-style">Get The Latest Deals</h2>
                             <p class="paragraph-style">$30 coupon for first shopping</p>
