--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                             <p class="paragraph-style">$30 coupon for first shopping</p>
                         </div>
                         <div class="contact-form">
-                            <input type="text">
+                            <input type="text" placeholder="Enter Your Email Address">
                             <button class="button-style">Subscribe</button>
                         </div>
                     </div>
